src/test/deca/context/invalid/pierre/objects/sameNameVarAndParam.deca
class A {
    int a;
    void go(int b) {
        boolean b;
    }
}